modified:   README.md 	renamed:    style.css -> css/style.css 	new file:   css/styles.css 	new file:   css/styless.css 	modified:   final.html 	modified:   index.html 	modified:   script.js 	deleted:    styles.css 	deleted:    styless.css 	modified:   surprise.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="5; url=surprise.html">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Christmas Present</title>
-  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="refresh" content="10; url=surprise.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Crafted🧡for Arushi</title>
+  <link rel="stylesheet" href="css/style.css">
  
 </head>
 <body>
