--- a/surprise.html
+++ b/surprise.html
@@ -2,69 +2,36 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="10; url=final.html">
-  <title>Candle Fun (Pure CSS Animation)</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="javascript" href="script.js">
+  <meta http-equiv="refresh" content="200; url=final.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Crafted🧡 for Arushi</title>
+  <link rel="stylesheet" href="css/styles.css">
+  
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="wrapper">
-  <div class="candles">
-    <div class="light__wave"></div>
-    <div class="candle1">
-      <div class="candle1__body">
-        <div class="candle1__eyes">
-          <span class="candle1__eyes-one"></span>
-          <span class="candle1__eyes-two"></span>
-        </div>
-        <div class="candle1__mouth"></div>
+  
+
+  <div class="table center">
+    <div class="monitor-wrapper center">
+      <div class="monitor center">
+        <p>Dukh ki saam ho, Ya ho sukh ka sawera, Sabkuch accha lagta hai, Jab sath ho tera…</p>
       </div>
-      <div class="candle1__stick"></div>
     </div>
-    
-    <div class="candle2">
-      <div class="candle2__body">
-        <div class="candle2__eyes">
-          <div class="candle2__eyes-one"></div>
-          <div class="candle2__eyes-two"></div>
-        </div>
-      </div>
-      <div class="candle2__stick"></div>
-    </div>
-    <div class="candle2__fire"></div>
-    <div class="sparkles-one"></div>
-    <div class="sparkles-two"></div>
-    <div class="candle__smoke-one">
-
-    </div>
-    <div class="candle__smoke-two">
-
-    </div>
-    
   </div>
-  <div class="floor">
-  </div>
-</div>
-<div id="container">
 
-  <!--Element for custom SVG spinner-->
-  <svg id="svg-spinner" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-  <circle cx="24" cy="4" r="4" fill="#fff"/>
-  <circle cx="12.19" cy="7.86" r="3.7" fill="#fffbf2"/>
-  <circle cx="5.02" cy="17.68" r="3.4" fill="#fef7e4"/>
-  <circle cx="5.02" cy="30.32" r="3.1" fill="#fef3d7"/>
-  <circle cx="12.19" cy="40.14" r="2.8" fill="#feefc9"/>
-  <circle cx="24" cy="44" r="2.5" fill="#feebbc"/>
-  <circle cx="35.81" cy="40.14" r="2.2" fill="#fde7af"/>
-  <circle cx="42.98" cy="30.32" r="1.9" fill="#fde3a1"/>
-  <circle cx="42.98" cy="17.68" r="1.6" fill="#fddf94"/>
-  <circle cx="35.81" cy="7.86" r="1.3" fill="#fcdb86"/>
-</svg>
-  <p id="svg-para">Finding Your Surprise</p>
-  </div>
-</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  <div class="text">Welcome Arushi</div>
+  
 
 <!-- partial -->
   
