modified:   final.html

--- a/final.html
+++ b/final.html
@@ -13,9 +13,9 @@
     <div class="text">
       <p>Hey 🧡</p>
       <p>
-        <span class="word wisteria">move the</span>
-        <span class="word belize">papers</span>
-        <span class="word pomegranate">it's only for you</span>
+        <span class="word wisteria">move</span>
+        <span class="word belize">the</span>
+        <span class="word pomegranate">papers</span>
     
       </p>
     </div>
