modified:   css/style.css 	modified:   css/styles.css 	modified:   css/styless.css 	modified:   final.html 	modified:   index.html 	modified:   surprise.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="10; url=surprise.html">
+  <!--meta http-equiv="refresh" content="10; url=surprise.html"-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Crafted🧡for Arushi</title>
@@ -9,25 +9,40 @@
  
 </head>
 <body>
-  <h2 class="blinking-dot">Wait 10 sec For Redirect<span class="dot">..</span></h2>
-  <div class="letter-image" >
-    <div class="animated-mail">
-      <div class="back-fold"></div>
-      <div class="letter">
-        <div class="letter-border"></div>
-        <div class="letter-title"></div>
-        <div class="letter-context"></div>
-        <div class="custom-text" style="margin: 3px;">Wait! i have something</div>
-        <div class="letter-stamp">
-          <div class="letter-stamp-inner"></div>
+  <div class="background-container">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+    <div class="clouds"></div>
+  <div class="blinking-dot"> 
+    <!-- HTML !-->
+      <button class="button-53" role="button" role="button" onclick="location.href = './surprise.html';">Next Page</button>
+
+
+
+    <div class="letter-image" >
+
+      <div class="animated-mail">
+        <div class="back-fold"></div>
+        <div class="letter">
+          <div class="letter-border"></div>
+          <div class="letter-title"></div>
+          <div class="letter-context"></div>
+          <div class="custom-text">It's Like You<span class="dot">😚</span></div>
+          <div class="letter-stamp">
+            <div class="letter-stamp-inner"></div>
+          </div>
         </div>
+        <div class="top-fold"></div>
+        <div class="body"></div>
+        <div class="left-fold"></div>
       </div>
-      <div class="top-fold"></div>
-      <div class="body"></div>
-      <div class="left-fold"></div>
+      <div class="shadow"></div>
     </div>
-    <div class="shadow"></div>
   </div>
+ 
+  
+  
 
 </body>
 
