--- a/final.html
+++ b/final.html
@@ -10,6 +10,11 @@
     
   </head>
   <body>
+    <div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+   </div>
     <div class="text">
       <p>Hey 🧡</p>
       <p>
