--- a/surprise.html
+++ b/surprise.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="30; url=final.html">
+  <!--meta http-equiv="refresh" content="30; url=final.html"-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Crafted🧡 for Arushi</title>
@@ -12,7 +12,7 @@
 </head>
 <body>
   
-
+  <button class="button-49" role="button" onclick="location.href = './final.html';" >Next Page</button>
   <div class="table center">
     <div class="monitor-wrapper center">
       <div class="monitor center">
