modified:   script.js

--- a/final.html
+++ b/final.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/styless.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Crafted🧡 for</title>
+    <title>Crafted🧡 for Arushi</title>
   </head>
   <body>
-    <div>
-      <canvas id="canvas" width="100%" height="100%"></canvas>
+    <div class="scroll-lock">
+      <canvas id="canvas"></canvas>
 
       <div class="carousel">
         <div class="carousel-item">
@@ -90,7 +90,7 @@
         </div>
         <div class="carousel-item">
           <div class="carousel-box">
-            <div class="title">I love You ❤️</div>
+            <div class="title">I love You Arushi❤️</div>
             <div class="num">10</div>
             <img
               src="https://i.pinimg.com/564x/4c/90/85/4c90852f3645127ffa41e350e94dd579.jpg"
