new file:   10.jpg 	new file:   9.png 	modified:   css/styless.css 	modified:   final.html

--- a/final.html
+++ b/final.html
@@ -85,7 +85,7 @@
           <div class="carousel-box">
             <div class="title">and I have Crush on You 🥰</div>
             <div class="num">09</div>
-            <img src="https://wallpapercave.com/dwp2x/wp3113283.jpg" />
+            <img src="/9.png" />
           </div>
         </div>
         <div class="carousel-item">
@@ -93,7 +93,7 @@
             <div class="title">I love You Arushi❤️</div>
             <div class="num">10</div>
             <img
-              src="https://i.pinimg.com/564x/4c/90/85/4c90852f3645127ffa41e350e94dd579.jpg"
+              src="/10.jpg"
             />
           </div>
         </div>
